Add terrafrom template for EC2 and SG

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,16 @@
 .idea/
-secrets/
+
+# TERRAFORM IGNORE
+**/.terraform/*
+*.tfstate
+*.tfstate.*
+crash.log
+crash.*.log
+*.tfvars
+*.tfvars.json
+override.tf
+override.tf.json
+*_override.tf
+*_override.tf.json
+.terraformrc
+terraform.rc
